# otuscmake

./: CMakeLists.txt  main.cpp  version.h  version.h.in
.github/workflows/: release.yml
